@@ -117,7 +117,6 @@ PeerJ, 10, e13075.
 \url{https://peerj.com/articles/13075/}
 Supplemental information includes OTU table and taxonomy table and publicly-accessible from:
 \url{DOI:10.7717/peerj.13075/supp-1}
-
 \url{DOI:10.7717/peerj.13075/supp-2}
 }
 \author{
