@@ -29,3 +29,4 @@ Changes in version 1.3.x
 + bugfix: getExperimentCrossCorrelation's "matrix"" mode works with features named equally
 + bugfix: getExperimentCrossCorrelation's calculates correlations correctly with features named equally
 + added new skin microbiome example data set 'peerj13075'
++ added detection threshold option to getTopTaxa
